--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "private": true,
   "devDependencies": {
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "13.2.2",
     "@nrwl/eslint-plugin-nx": "13.2.2",
     "@nrwl/express": "13.2.2",
     "@nrwl/jest": "13.2.2",
     "@nrwl/linter": "13.2.2",
+    "@nrwl/nest": "13.2.2",
     "@nrwl/node": "13.2.2",
     "@nrwl/tao": "13.2.2",
     "@nrwl/workspace": "13.2.2",
@@ -30,7 +33,13 @@
     "typescript": "~4.4.3"
   },
   "dependencies": {
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
+    "@nrwl/nest": "^13.2.2",
     "express": "4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.0.0",
     "tslib": "^2.0.0"
   }
 }
